--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 
     					<!-- section title -->
     					<div class="title text-center">
-    						<h2>My <span class="color">Skills</span></h2>
+    						<h2>La <span class="color">Compétence</span></h2>
     						<div class="border"></div>
     					</div>
     					<!-- /section title -->
@@ -500,83 +500,36 @@
 
     					<!-- section title -->
     					<div class="title text-center wow fadeIn" data-wow-duration="500ms">
-    						<h2>Get In <span class="color">Touch</span></h2>
+    						<h2>La <span class="color">Contact</span></h2>
     						<div class="border"></div>
     					</div>
     					<!-- /section title -->
 
     					<!-- Contact Details -->
     					<div class="contact-info col-md-offset-3 col-md-6 wow fadeInUp" data-wow-duration="500ms">
-    						<h3>Contact Details</h3>
-    						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam, vero, provident, eum eligendi blanditiis ex explicabo vitae nostrum facilis asperiores dolorem illo officiis ratione vel fugiat dicta laboriosam labore adipisci.</p>
+    						<h3>Contactez-moi</h3>
+    						<p>Vous avez des questions de moi, vous voulez donner du travil à moi ou vous voulez travailler avec moi.</p>
     						<div class="contact-details">
-    							<div class="con-info clearfix">
+    							<!-- <div class="con-info clearfix">
     								<i class="fa fa-home fa-lg"></i>
     								<span>Khaja Road, Bayzid, Chittagong, Bangladesh</span>
-    							</div>
+    							</div> -->
 
     							<div class="con-info clearfix">
     								<i class="fa fa-phone fa-lg"></i>
-    								<span>Phone: +880-31-000-000</span>
-    							</div>
-
-    							<div class="con-info clearfix">
-    								<i class="fa fa-fax fa-lg"></i>
-    								<span>Fax: +880-31-000-000</span>
+    								<span>Phone: 010-9255-0627</span>
     							</div>
 
     							<div class="con-info clearfix">
     								<i class="fa fa-envelope fa-lg"></i>
-    								<span>Email: hello@meghna.com</span>
+    								<a href="mailto:aimablegon@gmail.com"><span>Email: aimablegon@gmail.com</span></a>
     							</div>
     						</div>
     					</div>
     					<!-- / End Contact Details -->
-
-    					<!-- Contact Form -->
-    					<!-- <div class="contact-form col-md-6 wow fadeInUp" data-wow-duration="500ms" data-wow-delay="300ms">
-    						<form id="contact-form" method="post" action="sendmail.php" role="form">
-
-    							<div class="form-group">
-    								<input type="text" placeholder="Your Name" class="form-control" name="name" id="name">
-    							</div>
-
-    							<div class="form-group">
-    								<input type="email" placeholder="Your Email" class="form-control" name="email" id="email">
-    							</div>
-
-    							<div class="form-group">
-    								<input type="text" placeholder="Subject" class="form-control" name="subject" id="subject">
-    							</div>
-
-    							<div class="form-group">
-    								<textarea rows="6" placeholder="Message" class="form-control" name="message" id="message"></textarea>
-    							</div>
-
-    							<div id="mail-success" class="success">
-    								Thank you. The Mailman is on His Way :)
-    							</div>
-
-    							<div id="mail-fail" class="error">
-    								Sorry, don't know what happened. Try later :(
-    							</div>
-
-    							<div id="cf-submit">
-    								<input type="submit" id="contact-submit" class="btn btn-transparent" value="Submit">
-    							</div>
-
-    						</form>
-    					</div> -->
-    					<!-- ./End Contact Form -->
-
     				</div> <!-- end row -->
     			</div> <!-- end container -->
 
-    			<!-- Google Map -->
-    			<!-- <div class="google-map wow fadeInDown" data-wow-duration="500ms">
-    				<div id="map-canvas"></div>
-    			</div> -->
-    			<!-- /Google Map -->
 
     		</section> <!-- end section -->
 
@@ -588,34 +541,6 @@
     			    <div class="row wow fadeInUp" data-wow-duration="500ms">
     					<div class="col-lg-12">
 
-    						<!-- Footer Social Links -->
-    						<!-- <div class="social-icon">
-    							<ul>
-    								<li>
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                    </li>
-    								<li>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                    </li>
-    								<li>
-                        <a href="#"><i class="fa fa-google-plus"></i></a>
-                    </li>
-    								<li>
-                        <a href="#"><i class="fa fa-youtube"></i></a>
-                    </li>
-    								<li>
-                        <a href="#"><i class="fa fa-linkedin"></i></a>
-                    </li>
-    								<li>
-                        <a href="#"><i class="fa fa-dribbble"></i></a>
-                    </li>
-    								<li>
-                        <a href="#"><i class="fa fa-pinterest"></i></a>
-                    </li>
-    							</ul>
-    						</div> -->
-    						<!--/. End Footer Social Links -->
-
     						<!-- copyright -->
     						<div class="copyright text-center">
     							<a href="index.html">
@@ -623,7 +548,7 @@
     							</a>
     							<br />
 
-    							<!-- <p>Design And Developed by <a href="http://www.themefisher.com"> Themefisher Team</a>. Copyright &copy; 2015. All Rights Reserved.</p> -->
+    							<p> Copyright &copy; 2017. All Rights Reserved.</p>
     						</div>
     						<!-- /copyright -->
 
