--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
         <link rel="stylesheet" href="css/main.css">
 		<!-- Media Queries -->
         <link rel="stylesheet" href="css/media-queries.css">
+    <!-- Devicons -->
+        <link rel="stylesheet" href="css/devicons.css">
 
 		<!--
 		Google Font
