--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
               <div class="col-md-3 col-sm-6 col-xs-12 text-center wow fadeInUp" data-wow-duration="500ms" >
     						<div class="wrap-about">
     							<div class="icon-box">
-    								<i class="fa fa-lightbulb-o fa-4x"></i>
+    								<i class="fa devicons_1 devicons-html5"></i>
     							</div>
     							<div class="about-content text-center">
     								<h3 class="ddd">HTML</h3>
@@ -414,7 +414,7 @@
               <div class="col-md-3 col-sm-6 col-xs-12 text-center wow fadeInUp" data-wow-duration="500ms" data-wow-delay="250ms">
     						<div class="wrap-about">
     							<div class="icon-box">
-    								<i class="fa fa-users fa-4x"></i>
+    								<i class="fa devicons_1 devicons-css3"></i>
     							</div>
     							<div class="about-content text-center">
     								<h3>CSS</h3>
@@ -427,7 +427,7 @@
               <div class="col-md-3 col-sm-6 col-xs-12 text-center wow fadeInUp" data-wow-duration="500ms" data-wow-delay="500ms">
     						<div class="wrap-about">
     							<div class="icon-box">
-    								<i class="fa fa-users fa-4x"></i>
+    								<i class="fa  devicons_2 devicons-javascript"></i>
     							</div>
     							<div class="about-content text-center">
     								<h3>Javscript</h3>
@@ -440,7 +440,7 @@
               <div class="col-md-3 col-sm-6 col-xs-12 text-center wow fadeInUp" data-wow-duration="500ms" data-wow-delay="750ms">
     						<div class="wrap-about">
     							<div class="icon-box">
-    								<i class="fa fa-users fa-4x"></i>
+    								<i class="fa devicons_2 devicons-jquery"></i>
     							</div>
     							<div class="about-content text-center">
     								<h3>jQuery</h3>
@@ -453,7 +453,7 @@
               <div class="col-md-3 col-sm-6 col-xs-12 text-center wow fadeInUp" data-wow-duration="500ms" data-wow-delay="1000ms">
     						<div class="wrap-about">
     							<div class="icon-box">
-    								<i class="fa fa-users fa-4x"></i>
+    								<i class="fa devicons_3 devicons-less"></i>
     							</div>
     							<div class="about-content text-center">
     								<h3>LESS</h3>
@@ -466,7 +466,7 @@
               <div class="col-md-3 col-sm-6 col-xs-12 text-center wow fadeInUp" data-wow-duration="500ms" data-wow-delay="1250ms">
     						<div class="wrap-about">
     							<div class="icon-box">
-    								<i class="fa fa-users fa-4x"></i>
+    								<i class="fa  devicons_2 devicons-bootstrap"></i>
     							</div>
     							<div class="about-content text-center">
     								<h3>BOOTSTRAP</h3>
@@ -479,7 +479,7 @@
               <div class="col-md-3 col-sm-6 col-xs-12 text-center wow fadeInUp" data-wow-duration="500ms" data-wow-delay="1500ms">
     						<div class="wrap-about">
     							<div class="icon-box">
-    								<i class="fa fa-users fa-4x"></i>
+    								<i class="fa  devicons_3 devicons-github_badge"></i>
     							</div>
     							<div class="about-content text-center">
     								<h3>GIT</h3>
