--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     						<div class="carousel-caption">
     							<div>
     								<img class="wow fadeInUp" src="img/meghna.png" alt="Meghna">
-    								<h2 data-wow-duration="500ms"  data-wow-delay="500ms" class="heading animated fadeInRight">Welcome To Meghna</h2>
+    								<h2 data-wow-duration="500ms"  data-wow-delay="500ms" class="heading animated fadeInRight">Bienvenu Mon site</h2>
     							</div>
     						</div>
     						</div>
@@ -104,9 +104,9 @@
     							<div class="bg-img bg-img-2"></div>
     						<div class="carousel-caption">
     							<div>
-    								<h2 class="heading animated fadeInDown">Highly Responsive</h2>
-    								<h3 class="animated fadeInUp">With all Mejor Browser support including IE 9</h3>
-    								<a class="btn btn-green animated fadeInUp" href="#">Get Started</a>
+    								<h2 class="heading animated fadeInDown">C'est le site de Gon</h2>
+    								<h3 class="animated fadeInUp">C'est mon site qui est beaucoup de portfolio sur le site de Web.</h3>
+    								<a class="btn btn-green animated fadeInUp" href="#showcase">Voir portfolio</a>
     							</div>
     						</div>
     						</div>
@@ -119,9 +119,9 @@
     							<div class="bg-img bg-img-3"></div>
     						<div class="carousel-caption">
     							<div>
-    								<h2 class="heading animated fadeInRight">One Page Parallax HTML Template</h2>
-    								<h3 class="animated fadeInLeft">Clean and Professional Design</h3>
-    								<a class="btn btn-green animated fadeInUp" href="#">Learn More</a>
+    								<h2 class="heading animated fadeInRight">Je suis développeuse frontend.</h2>
+    								<h3 class="animated fadeInLeft">Si vous serez content de mes portfolio, vous me contacterez!</h3>
+    								<a class="btn btn-green animated fadeInUp" href="#contact-us">Contact-moi</a>
     							</div>
     						</div>
     						</div>
@@ -222,8 +222,8 @@
 
     					<!-- single portfolio item -->
     					<li class="mix app">
-    						<a href="../twice/index.html" data-largesrc="img/portfolio/portx1.jpg" data-title="Twice" data-description="twice  (반응형)">
-    							<img src="img/portfolio/portx1.jpg" alt="Meghna">
+    						<a href="../twice/index.html" data-largesrc="/Portfolio_17/img/images/twice.jpg" data-title="Twice" data-description="twice  (반응형)">
+    							<img src="/Portfolio_17/img/images/twice.jpg" alt="Meghna">
     							<div class="hover-mask">
     								<h3>Twice</h3>
     								<span>
@@ -236,8 +236,8 @@
 
     					<!-- single portfolio item -->
     					<li class="mix web">
-    						<a href="http://pf.i-make.kr:8080/homibing/html/home.jsp" data-largesrc="img/portfolio/portx1.jpg" data-title="Homibing(호미빙)" data-description="호미빙 (반응형, 팀프로젝트)">
-    							<img src="img/portfolio/portx1.jpg" alt="Meghna">
+    						<a href="http://pf.i-make.kr:8080/homibing/html/home.jsp" data-largesrc="/Portfolio_17/img/images/homibing.jpg" data-title="Homibing(호미빙)" data-description="호미빙 (반응형, 팀프로젝트)">
+    							<img src="/Portfolio_17/img/images/homibing.jpg" alt="Meghna">
     							<div class="hover-mask">
     								<h3>Homibing</h3>
     								<span>
@@ -250,8 +250,8 @@
 
     					<!-- single portfolio item -->
     					<li class="mix photoshop">
-    						<a href="javascript:void(0)" data-largesrc="img/portfolio/portx1.jpg" data-title="Koita(한국산업기술진흥협회)" data-description="한국산업기술진흥현회(Koita)에서 주관한 컨퍼런스 이벤트 모바일페이지(모바일, 부트스트랩)">
-    							<img src="img/portfolio/portx1.jpg" alt="Meghna">
+    						<a href="javascript:void(0)" data-largesrc="/Portfolio_17/img/images/koita.jpg" data-title="Koita(한국산업기술진흥협회)" data-description="한국산업기술진흥현회(Koita)에서 주관한 컨퍼런스 이벤트 모바일페이지(모바일, 부트스트랩)">
+    							<img src="/Portfolio_17/img/images/koita.jpg" alt="Meghna">
     							<div class="hover-mask">
     								<h3>KOITA(한국산업기술진흥협회)</h3>
     								<span>
@@ -264,8 +264,8 @@
 
     					<!-- single portfolio item -->
     					<li class="mix illustrator">
-    						<a href="javascript:void(0)" data-largesrc="img/portfolio/portx1.jpg" data-title="Oberrygood" data-description="프렌차이즈 카페 홈페이지(템플릿, 부트스트랩, 반응형)">
-    							<img src="img/portfolio/portx1.jpg" alt="Meghna">
+    						<a href="javascript:void(0)" data-largesrc="/Portfolio_17/img/images/oberrygood.jpg" data-title="Oberrygood" data-description="프렌차이즈 카페 홈페이지(템플릿, 부트스트랩, 반응형)">
+    							<img src="/Portfolio_17/img/images/oberrygood.jpg" alt="Meghna">
     							<div class="hover-mask">
     								<h3>Oberrygood</h3>
     								<span>
@@ -278,8 +278,8 @@
 
     					<!-- single portfolio item -->
     					<li class="mix app">
-    						<a href="javascript:void(0)" data-largesrc="img/portfolio/portx1.jpg" data-title="Ifixitkorea" data-description="아이폰수리업체 홈페이지(템플릿, 부트스트랩, 반응형)">
-    							<img src="img/portfolio/portx1.jpg" alt="Meghna">
+    						<a href="javascript:void(0)" data-largesrc="/Portfolio_17/img/images/ifix.jpg" data-title="Ifixitkorea" data-description="아이폰수리업체 홈페이지(템플릿, 부트스트랩, 반응형)">
+    							<img src="/Portfolio_17/img/images/ifix.jpg" alt="Meghna">
     							<div class="hover-mask">
     								<h3>Ifixitkorea</h3>
     								<span>
@@ -292,8 +292,8 @@
 
     					<!-- single portfolio item -->
     					<li class="mix app">
-    						<a href="javascript:void(0)" data-largesrc="img/portfolio/portx1.jpg" data-title="KIA Tigers" data-description="기아타이거즈 공식홈페이지(반응형)">
-    							<img src="img/portfolio/portx1.jpg" alt="Meghna">
+    						<a href="javascript:void(0)" data-largesrc="/Portfolio_17/img/portfolio/portx1.jpg" data-title="KIA Tigers" data-description="기아타이거즈 공식홈페이지(반응형)">
+    							<img src="/Portfolio_17/img/portfolio/portx1.jpg" alt="Meghna">
     							<div class="hover-mask">
     								<h3>KIA Tigers </h3>
     								<span>
@@ -401,7 +401,7 @@
               <div class="col-md-3 col-sm-6 col-xs-12 text-center wow fadeInUp" data-wow-duration="500ms" >
     						<div class="wrap-about">
     							<div class="icon-box">
-    								<i class="fa devicons_1 devicons-html5"></i>
+    								<i class="fa devicons devicons_font_1 devicons-html5"></i>
     							</div>
     							<div class="about-content text-center">
     								<h3 class="ddd">HTML</h3>
@@ -411,10 +411,10 @@
     						</div>
     					</div>
 
-              <div class="col-md-3 col-sm-6 col-xs-12 text-center wow fadeInUp" data-wow-duration="500ms" data-wow-delay="250ms">
+              <div class="col-md-3 col-sm-6 col-xs-12 text-center wow fadeInUp" data-wow-duration="500ms" data-wow-delay="150ms">
     						<div class="wrap-about">
     							<div class="icon-box">
-    								<i class="fa devicons_1 devicons-css3"></i>
+    								<i class="fa devicons devicons_font_1 devicons-css3"></i>
     							</div>
     							<div class="about-content text-center">
     								<h3>CSS</h3>
@@ -424,10 +424,10 @@
     						</div>
     					</div>
 
-              <div class="col-md-3 col-sm-6 col-xs-12 text-center wow fadeInUp" data-wow-duration="500ms" data-wow-delay="500ms">
+              <div class="col-md-3 col-sm-6 col-xs-12 text-center wow fadeInUp" data-wow-duration="500ms" data-wow-delay="250ms">
     						<div class="wrap-about">
     							<div class="icon-box">
-    								<i class="fa  devicons_2 devicons-javascript"></i>
+    								<i class="fa  devicons devicons_font_2 devicons-javascript"></i>
     							</div>
     							<div class="about-content text-center">
     								<h3>Javscript</h3>
@@ -437,10 +437,10 @@
     						</div>
     					</div>
 
-              <div class="col-md-3 col-sm-6 col-xs-12 text-center wow fadeInUp" data-wow-duration="500ms" data-wow-delay="750ms">
+              <div class="col-md-3 col-sm-6 col-xs-12 text-center wow fadeInUp" data-wow-duration="500ms" data-wow-delay="350ms">
     						<div class="wrap-about">
     							<div class="icon-box">
-    								<i class="fa devicons_2 devicons-jquery"></i>
+    								<i class="fa devicons devicons_font_2 devicons-jquery"></i>
     							</div>
     							<div class="about-content text-center">
     								<h3>jQuery</h3>
@@ -450,10 +450,10 @@
     						</div>
     					</div>
 
-              <div class="col-md-3 col-sm-6 col-xs-12 text-center wow fadeInUp" data-wow-duration="500ms" data-wow-delay="1000ms">
+              <div class="col-md-3 col-sm-6 col-xs-12 text-center wow fadeInUp" data-wow-duration="500ms" data-wow-delay="450ms">
     						<div class="wrap-about">
     							<div class="icon-box">
-    								<i class="fa devicons_3 devicons-less"></i>
+    								<i class="fa devicons devicons_font_3 devicons-less"></i>
     							</div>
     							<div class="about-content text-center">
     								<h3>LESS</h3>
@@ -463,10 +463,10 @@
     						</div>
     					</div>
 
-              <div class="col-md-3 col-sm-6 col-xs-12 text-center wow fadeInUp" data-wow-duration="500ms" data-wow-delay="1250ms">
+              <div class="col-md-3 col-sm-6 col-xs-12 text-center wow fadeInUp" data-wow-duration="500ms" data-wow-delay="550ms">
     						<div class="wrap-about">
     							<div class="icon-box">
-    								<i class="fa  devicons_2 devicons-bootstrap"></i>
+    								<i class="fa  devicons devicons_font_2 devicons-bootstrap"></i>
     							</div>
     							<div class="about-content text-center">
     								<h3>BOOTSTRAP</h3>
@@ -476,10 +476,10 @@
     						</div>
     					</div>
 
-              <div class="col-md-3 col-sm-6 col-xs-12 text-center wow fadeInUp" data-wow-duration="500ms" data-wow-delay="1500ms">
+              <div class="col-md-3 col-sm-6 col-xs-12 text-center wow fadeInUp" data-wow-duration="500ms" data-wow-delay="650ms">
     						<div class="wrap-about">
     							<div class="icon-box">
-    								<i class="fa  devicons_3 devicons-github_badge"></i>
+    								<i class="fa devicons devicons_font_3 devicons-github_badge"></i>
     							</div>
     							<div class="about-content text-center">
     								<h3>GIT</h3>
@@ -511,21 +511,20 @@
     					<div class="contact-info col-md-offset-3 col-md-6 wow fadeInUp" data-wow-duration="500ms">
     						<h3>Contactez-moi</h3>
     						<p>Vous avez des questions de moi, vous voulez donner du travil à moi ou vous voulez travailler avec moi.</p>
-    						<div class="contact-details">
-    							<!-- <div class="con-info clearfix">
-    								<i class="fa fa-home fa-lg"></i>
-    								<span>Khaja Road, Bayzid, Chittagong, Bangladesh</span>
-    							</div> -->
+    						<div class="contact-details text-center">
+      							<div class="con-info clearfix  ">
+      								<a href="mailto:aimablegon@gmail.com"><i class="fa fa-envelope fa-lg foot_info"></i>
+      								<span class="foot_info">Email : aimablegon@gmail.com</span></a>
+      							</div>
+      							<div class="con-info clearfix foot_git">
+                      <div class="border_2"></div>
+      								<span class="foot_info color">Si vous voulez voir de mes code et mon référentiel, Appuyez sur le button</span>
+                      <br />
+                      <div class="text-center">
+                        <a href="https://github.com/aimablegon"><i class="fa devicons devicons-github_badge foot_info"></i> GITHUB</a>
+                      </div>
 
-    							<div class="con-info clearfix">
-    								<i class="fa fa-phone fa-lg"></i>
-    								<span>Phone: 010-9255-0627</span>
-    							</div>
-
-    							<div class="con-info clearfix">
-    								<i class="fa fa-envelope fa-lg"></i>
-    								<a href="mailto:aimablegon@gmail.com"><span>Email: aimablegon@gmail.com</span></a>
-    							</div>
+      							</div>
     						</div>
     					</div>
     					<!-- / End Contact Details -->
@@ -540,15 +539,17 @@
 
     		<footer id="footer" class="bg-one">
     			<div class="container">
-    			    <div class="row wow fadeInUp" data-wow-duration="500ms">
+    			   <div class="row wow fadeInUp" data-wow-duration="500ms">
     					<div class="col-lg-12">
+                <div class="con-info clearfix">
 
+
+                </div>
     						<!-- copyright -->
     						<div class="copyright text-center">
     							<a href="index.html">
     								<img src="img/logo-meghna.png" alt="Meghna" />
     							</a>
-    							<br />
 
     							<p> Copyright &copy; 2017. All Rights Reserved.</p>
     						</div>
