--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 
     					<!-- single portfolio item -->
     					<li class="mix photoshop">
-    						<a href="javascript:void(0)" data-largesrc="/Portfolio_17/img/images/koita.jpg" data-title="Koita(한국산업기술진흥협회)" data-description="한국산업기술진흥현회(Koita)에서 주관한 컨퍼런스 이벤트 모바일페이지(모바일, 부트스트랩)">
+    						<a href="../koita/mobile/html/main/main.html" data-largesrc="/Portfolio_17/img/images/koita.jpg" data-title="Koita(한국산업기술진흥협회)" data-description="한국산업기술진흥현회(Koita)에서 주관한 컨퍼런스 이벤트 모바일페이지(모바일, 부트스트랩)">
     							<img src="/Portfolio_17/img/images/koita.jpg" alt="Meghna">
     							<div class="hover-mask">
     								<h3>KOITA(한국산업기술진흥협회)</h3>
