--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
     					<!-- single portfolio item -->
     					<li class="mix web">
-    						<a href="http://pf.i-make.kr:8080/homibing/html/home.jsp" data-largesrc="/Portfolio_17/img/images/homibing.jpg" data-title="Homibing(호미빙)" data-description="호미빙 (반응형, 팀프로젝트)">
+    						<a href="../homibing/html/home.html" data-largesrc="/Portfolio_17/img/images/homibing.jpg" data-title="Homibing(호미빙)" data-description="호미빙 (반응형, 팀프로젝트)">
     							<img src="/Portfolio_17/img/images/homibing.jpg" alt="Meghna">
     							<div class="hover-mask">
     								<h3>Homibing</h3>
@@ -264,7 +264,7 @@
 
     					<!-- single portfolio item -->
     					<li class="mix illustrator">
-    						<a href="javascript:void(0)" data-largesrc="/Portfolio_17/img/images/oberrygood.jpg" data-title="Oberrygood" data-description="프렌차이즈 카페 홈페이지(템플릿, 부트스트랩, 반응형)">
+    						<a href="../oberrygood/views/front/index.html" data-largesrc="/Portfolio_17/img/images/oberrygood.jpg" data-title="Oberrygood" data-description="프렌차이즈 카페 홈페이지(템플릿, 부트스트랩, 반응형)">
     							<img src="/Portfolio_17/img/images/oberrygood.jpg" alt="Meghna">
     							<div class="hover-mask">
     								<h3>Oberrygood</h3>
@@ -278,7 +278,7 @@
 
     					<!-- single portfolio item -->
     					<li class="mix app">
-    						<a href="javascript:void(0)" data-largesrc="/Portfolio_17/img/images/ifix.jpg" data-title="Ifixitkorea" data-description="아이폰수리업체 홈페이지(템플릿, 부트스트랩, 반응형)">
+    						<a href="../ifix/views/home.html" data-largesrc="/Portfolio_17/img/images/ifix.jpg" data-title="Ifixitkorea" data-description="아이폰수리업체 홈페이지(템플릿, 부트스트랩, 반응형)">
     							<img src="/Portfolio_17/img/images/ifix.jpg" alt="Meghna">
     							<div class="hover-mask">
     								<h3>Ifixitkorea</h3>
