--- a/index.html
+++ b/index.html
@@ -479,10 +479,10 @@
               <div class="col-md-3 col-sm-6 col-xs-12 text-center wow fadeInUp" data-wow-duration="500ms" data-wow-delay="650ms">
     						<div class="wrap-about">
     							<div class="icon-box">
-    								<i class="fa devicons devicons_font_3 devicons-github_badge"></i>
+    								<i class="fa devicons devicons_font_3 devicons-git"></i>
     							</div>
     							<div class="about-content text-center">
-    								<h3>GIT</h3>
+    								<h3>GIT, SVN</h3>
                     <br>
     								<!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, nihil, libero, perspiciatis eos provident laborum eum dignissimos</p> -->
     							</div>
