--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
       								<span class="foot_info color">Si vous voulez voir de mes code et mon référentiel, Appuyez sur le button</span>
                       <br />
                       <div class="text-center">
-                        <a href="https://github.com/aimablegon"><i class="fa devicons devicons-github_badge foot_info"></i> GITHUB</a>
+                        <a href="https://github.com/aimablegon"><i class="fa devicons devicons-github_badge foot_info fa-2x" style="vertical-align: bottom; font-size: 24px;"></i> Gon's github</a>
                       </div>
 
       							</div>
