--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<!-- Favicon -->
-		<link rel="shortcut icon" type="image/x-icon" href="img/favicon.png" />
+		<link rel="shortcut icon" type="image/x-icon" href="img/onion.png" />
 
 		<!-- CSS
 		================================================== -->
@@ -90,7 +90,7 @@
     							<div class="bg-img bg-img-1"></div>
     						<div class="carousel-caption">
     							<div>
-    								<img class="wow fadeInUp" src="img/meghna.png" alt="Meghna">
+    								<img class="wow fadeInUp" src="img/logo_b.png" alt="goinon">
     								<h2 data-wow-duration="500ms"  data-wow-delay="500ms" class="heading animated fadeInRight">Bienvenu Mon site</h2>
     							</div>
     						</div>
@@ -162,7 +162,7 @@
 					<!-- logo -->
                     <a class="navbar-brand" href="#body">
 						<h1 id="logo">
-							<img src="img/logo-meghna.png" alt="Meghna" />
+							<img src="img/logo_s.png" alt="gonion" />
 						</h1>
 					</a>
 					<!-- /logo -->
@@ -291,7 +291,7 @@
     					<!-- /single portfolio item -->
 
     					<!-- single portfolio item -->
-    					<li class="mix app">
+    					<!-- <li class="mix app">
     						<a href="javascript:void(0)" data-largesrc="/Portfolio_17/img/portfolio/portx1.jpg" data-title="KIA Tigers" data-description="기아타이거즈 공식홈페이지(반응형)">
     							<img src="/Portfolio_17/img/portfolio/portx1.jpg" alt="Meghna">
     							<div class="hover-mask">
@@ -301,7 +301,7 @@
     								</span>
     							</div>
     						</a>
-    					</li>
+    					</li> -->
     					<!-- /single portfolio item -->
 
     				</ul> <!-- end og grid -->
@@ -548,7 +548,7 @@
     						<!-- copyright -->
     						<div class="copyright text-center">
     							<a href="index.html">
-    								<img src="img/logo-meghna.png" alt="Meghna" />
+    								<img src="img/logo_s.png" alt="gonion" />
     							</a>
 
     							<p> Copyright &copy; 2017. All Rights Reserved.</p>
