--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="description" content="Bievenu Gon's site ">
-
+        <meta http-equiv="Cache-Control" content="no-cache"/>
+        <meta http-equiv="Expires" content="0"/>
+        <meta http-equiv="Pragma" content="no-cache"/>
         <meta name="author" content="Muhammad Morshed">
 
         <title>Gon's portfolio</title>
