--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     	  ==================================== -->
     		<div id="loading-mask">
     			<div class="loading-img">
-    				<img alt="Meghna Preloader" src="img/preloader.gif"  />
+    				<img alt="Meghna Preloader" src="img/gif-load.gif"  />
     			</div>
     		</div>
         <!--
