--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
     					<!-- single portfolio item -->
     					<li class="mix app">
     						<a href="../twice/index.html" data-largesrc="/Portfolio_17/img/images/twice.jpg" data-title="Twice" data-description="twice  (반응형)">
-    							<img src="/Portfolio_17/img/images/twice.jpg" alt="Meghna">
+    							<img src="/Portfolio_17/img/images/twice-2.jpg" alt="twice">
     							<div class="hover-mask">
     								<h3>Twice</h3>
     								<span>
@@ -238,10 +238,23 @@
 
     					<!-- single portfolio item -->
     					<li class="mix web">
-    						<a href="../homibing/html/home.html" data-largesrc="/Portfolio_17/img/images/homibing.jpg" data-title="Homibing(호미빙)" data-description="호미빙 (반응형, 팀프로젝트)">
-    							<img src="/Portfolio_17/img/images/homibing.jpg" alt="Meghna">
+    						<a href="../homibing/html/home.html" data-largesrc="/Portfolio_17/img/images/homibing.jpg" data-title="Homibing(호미빙)" data-description="호미빙 (반응형)">
+    							<img src="/Portfolio_17/img/images/homibing-2.jpg" alt="homibing">
     							<div class="hover-mask">
     								<h3>Homibing</h3>
+    								<span>
+    									<i class="fa fa-plus fa-2x"></i>
+    								</span>
+    							</div>
+    						</a>
+    					</li>
+    					<!-- /single portfolio item -->
+              <!-- single portfolio item -->
+    					<li class="mix photoshop">
+    						<a href="http://www.kinfa.or.kr/home/main/index.do" data-largesrc="/Portfolio_17/img/images/miso.jpg" data-title="서민금융진흥원" data-description="서민금융진흥원 (반응형, 접근성, 부트스트랩)">
+    							<img src="/Portfolio_17/img/images/miso-2.jpg" alt="miso">
+    							<div class="hover-mask">
+    								<h3>서민금융진흥원</h3>
     								<span>
     									<i class="fa fa-plus fa-2x"></i>
     								</span>
@@ -253,7 +266,7 @@
     					<!-- single portfolio item -->
     					<li class="mix photoshop">
     						<a href="../koita/mobile/html/main/main.html" data-largesrc="/Portfolio_17/img/images/koita.jpg" data-title="Koita(한국산업기술진흥협회)" data-description="한국산업기술진흥현회(Koita)에서 주관한 컨퍼런스 이벤트 모바일페이지(모바일, 부트스트랩)">
-    							<img src="/Portfolio_17/img/images/koita.jpg" alt="Meghna">
+    							<img src="/Portfolio_17/img/images/koita-2.jpg" alt="koita">
     							<div class="hover-mask">
     								<h3>KOITA(한국산업기술진흥협회)</h3>
     								<span>
@@ -267,7 +280,7 @@
     					<!-- single portfolio item -->
     					<li class="mix illustrator">
     						<a href="../oberrygood/views/front/index.html" data-largesrc="/Portfolio_17/img/images/oberrygood.jpg" data-title="Oberrygood" data-description="프렌차이즈 카페 홈페이지(템플릿, 부트스트랩, 반응형)">
-    							<img src="/Portfolio_17/img/images/oberrygood.jpg" alt="Meghna">
+    							<img src="/Portfolio_17/img/images/oberrygood-2.jpg" alt="oberrygood">
     							<div class="hover-mask">
     								<h3>Oberrygood</h3>
     								<span>
@@ -281,7 +294,7 @@
     					<!-- single portfolio item -->
     					<li class="mix app">
     						<a href="../ifix/views/home.html" data-largesrc="/Portfolio_17/img/images/ifix.jpg" data-title="Ifixitkorea" data-description="아이폰수리업체 홈페이지(템플릿, 부트스트랩, 반응형)">
-    							<img src="/Portfolio_17/img/images/ifix.jpg" alt="Meghna">
+    							<img src="/Portfolio_17/img/images/ifix-2.jpg" alt="ifix">
     							<div class="hover-mask">
     								<h3>Ifixitkorea</h3>
     								<span>
