--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
     					<!-- single portfolio item -->
     					<li class="mix app">
-    						<a href="../twice/index.html" data-largesrc="/Portfolio_17/img/images/twice.jpg" data-title="Twice" data-description="twice  (반응형)">
+    						<a href="../twice/index.html" data-largesrc="/Portfolio_17/img/images/twice.jpg" data-title="Twice" data-description="twice (반응형)">
     							<img src="/Portfolio_17/img/images/twice-2.jpg" alt="twice">
     							<div class="hover-mask">
     								<h3>Twice</h3>
@@ -250,7 +250,7 @@
     					</li>
     					<!-- /single portfolio item -->
               <!-- single portfolio item -->
-    					<li class="mix photoshop">
+    					<!-- <li class="mix photoshop">
     						<a href="http://www.kinfa.or.kr/home/main/index.do" data-largesrc="/Portfolio_17/img/images/miso.jpg" data-title="서민금융진흥원" data-description="서민금융진흥원 (반응형, 접근성, 부트스트랩)">
     							<img src="/Portfolio_17/img/images/miso-2.jpg" alt="miso">
     							<div class="hover-mask">
@@ -260,7 +260,7 @@
     								</span>
     							</div>
     						</a>
-    					</li>
+    					</li> -->
     					<!-- /single portfolio item -->
 
     					<!-- single portfolio item -->
@@ -306,9 +306,9 @@
     					<!-- /single portfolio item -->
 
     					<!-- single portfolio item -->
-    					<!-- <li class="mix app">
-    						<a href="javascript:void(0)" data-largesrc="/Portfolio_17/img/portfolio/portx1.jpg" data-title="KIA Tigers" data-description="기아타이거즈 공식홈페이지(반응형)">
-    							<img src="/Portfolio_17/img/portfolio/portx1.jpg" alt="Meghna">
+    					<li class="mix app">
+    						<a href="http://hi.i-make.kr/himedia/main.html" data-largesrc="/Portfolio_17/img/images/hi.jpg" data-title="himedia" data-description="하이미디어컴퓨터학원 (반응형, 부트스트랩)">
+    							<img src="/Portfolio_17/img/images/hi-2.jpg" alt="himedia">
     							<div class="hover-mask">
     								<h3>KIA Tigers </h3>
     								<span>
@@ -316,7 +316,7 @@
     								</span>
     							</div>
     						</a>
-    					</li> -->
+    					</li>
     					<!-- /single portfolio item -->
 
     				</ul> <!-- end og grid -->
@@ -528,8 +528,8 @@
     						<p>Vous avez des questions de moi, vous voulez donner du travil à moi ou vous voulez travailler avec moi.</p>
     						<div class="contact-details text-center">
       							<div class="con-info clearfix  ">
-      								<a href="mailto:aimablegon@gmail.com"><i class="fa fa-envelope fa-lg foot_info"></i>
-      								<span class="foot_info">Email : aimablegon@gmail.com</span></a>
+      								<a href="mailto:aimablegon@naver.com"><i class="fa fa-envelope fa-lg foot_info"></i>
+      								<span class="foot_info">Email : aimablegon@naver.com</span></a>
       							</div>
       							<div class="con-info clearfix foot_git">
                       <div class="border_2"></div>
